feat: create new pages

--- a/gallery.html
+++ b/gallery.html
@@ -108,6 +108,7 @@
 											<ul class="sub-menu">
 												<li aria-haspopup="true"><a href="about.html">About Us</a></li>
 												<li aria-haspopup="true"><a href="gallery.html" style="text-decoration: underline;">Gallery</a></li>
+                        <li aria-haspopup="true"><a href="contact.html">Contact</a></li>
 											</ul>
 								    </li>
 
@@ -131,7 +132,7 @@
 
 											<!-- GET STARTED BUTTON -->
 											<li class="nl-simple" aria-haspopup="true">
-												<a href="signup-1.html" class="btn r-06 btn--theme hover--tra-coal last-link"><i class="fa-brands fa-paypal"></i>Make a Donation</a>
+												<a href="https://ko-fi.com/youngleadersfoundation" class="btn r-06 btn--theme hover--tra-coal last-link" target="_blank" rel="noopener"><i class="fa-brands fa-paypal"></i>Make a Donation</a>
 											</li>
 
 	        					</ul>
@@ -318,6 +319,76 @@
 								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-26.png" alt="Gallery Image 26">
 							</a>
 						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-27.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-27.jpg" alt="Gallery Image 27">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-28.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-28.jpg" alt="Gallery Image 28">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-29.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-29.jpg" alt="Gallery Image 29">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-30.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-30.jpg" alt="Gallery Image 30">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-31.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-31.jpg" alt="Gallery Image 31">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-32.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-32.jpg" alt="Gallery Image 32">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-33.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-33.jpg" alt="Gallery Image 33">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-34.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-34.jpg" alt="Gallery Image 34">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-35.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-35.jpg" alt="Gallery Image 35">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-36.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-36.jpg" alt="Gallery Image 36">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-37.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-37.jpg" alt="Gallery Image 37">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-38.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-38.jpg" alt="Gallery Image 38">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-39.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-39.jpg" alt="Gallery Image 39">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-40.jpg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-40.jpg" alt="Gallery Image 40">
+							</a>
+						</div>
 
 					</div> <!-- End row -->
 
@@ -370,7 +441,8 @@
 											<li><p><a href="about.html">About Us</a></p></li>
 											<li><p><a href="partnerships.html">Partnerships</a></p></li>							
 											<li><p><a href="projects.html">Projects</a></p></li>							
-											<li><p><a href="global-presence.html">Global Presence</a></p></li>							
+											<li><p><a href="global-presence.html">Global Presence</a></p></li>
+                      <li><p><a href="contact.html">Contact</a></p></li>							
 										</ul>
 
 									</div>
