--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 											<ul class="sub-menu">
 												<li aria-haspopup="true"><a href="about.html">About Us</a></li>
 												<li aria-haspopup="true"><a href="gallery.html">Gallery</a></li>
+												<li aria-haspopup="true"><a href="contact.html">Contact</a></li>
 											</ul>
 								    </li>
 
@@ -140,7 +141,7 @@
 
 											<!-- GET STARTED BUTTON -->
 											<li class="nl-simple" aria-haspopup="true">
-												<a href="signup-1.html" class="btn r-06 btn--theme hover--white last-link"><i class="fa-brands fa-paypal"></i>Make a Donation</a>
+												<a href="https://ko-fi.com/youngleadersfoundation" class="btn r-06 btn--theme hover--white last-link" target="_blank" rel="noopener"><i class="fa-brands fa-paypal"></i>Make a Donation</a>
 											</li>
 
 	        					</ul>
@@ -182,7 +183,7 @@
 									<div class="container text-center mt-4 mb-2">
 										<div class="btns-group">
 											<a href="#about" class="btn btn-md r-06 btn--theme hover--theme">Discover the project</a>
-											<a href="#features-2" class="btn btn-md r-06 btn--white hover--white"><i class="fa-brands fa-paypal" style="color: #1c1c1c;"></i> Make a donation</a> 
+											<a href="https://ko-fi.com/youngleadersfoundation" class="btn btn-md r-06 btn--white hover--white" target="_blank" rel="noopener"><i class="fa-brands fa-paypal" style="color: #1c1c1c;"></i> Make a donation</a> 
 										</div>	
 									 </div>
 
@@ -1028,8 +1029,8 @@
 										<p class="text-muted"><strong>Director (USA & China)</strong></p>
 
 										<ul class="foo-links clearfix d-flex gap-3">
-											<li><p><a href="terms.html"><i class="fa-brands fa-linkedin"></i></a></p></li>								
-											<li><p><a href="terms.html"><i class="fa-solid fa-envelope"></i></a></p></li>												
+											<!-- <li><p><a href="terms.html"><i class="fa-brands fa-linkedin"></i></a></p></li>								 -->
+											<li><p><a href="mailto:biadesalles@yahoo.com" target="_blank"><i class="fa-solid fa-envelope me-2 mb-3"></i>biadesalles@yahoo.com</a></p></li>												
 										</ul>
 
 										<!-- Text -->  
@@ -1080,8 +1081,8 @@
 										<p class="text-muted"><strong>Founder & Director (Brazil)</strong></p>
 
 										<ul class="foo-links clearfix d-flex gap-3">
-											<li><p><a href="terms.html"><i class="fa-brands fa-linkedin"></i></a></p></li>								
-											<li><p><a href="terms.html"><i class="fa-solid fa-envelope"></i></a></p></li>												
+											<!-- <li><p><a href="terms.html"><i class="fa-brands fa-linkedin"></i></a></p></li>							 -->
+											<li><p><a href="mailto:danielrubensyoungleaders@gmail.com" target="_blank"><i class="fa-solid fa-envelope me-2 mb-3"></i>danielrubensyoungleaders@gmail.com</a></p></li>												
 										</ul>
 
 										<!-- Text -->  
@@ -1129,7 +1130,7 @@
 										<p class="p-md">Your donation helps us bring education, sanitation, and opportunities to traditional and underserved communities.</p>
 
 										<!-- Buttons -->
-										<a href="https://www.paypal.com/donate/?hosted_button_id=XXXXXXXXXXXXX" 
+										<a href="https://ko-fi.com/youngleadersfoundation" 
 											class="btn btn-sm r-06 btn--theme hover--theme" 
 											target="_blank" 
 											rel="noopener noreferrer">
@@ -1184,7 +1185,8 @@
 											<li><p><a href="about.html">About Us</a></p></li>
 											<li><p><a href="partnerships.html">Partnerships</a></p></li>							
 											<li><p><a href="projects.html">Projects</a></p></li>							
-											<li><p><a href="global-presence.html">Global Presence</a></p></li>							
+											<li><p><a href="global-presence.html">Global Presence</a></p></li>					
+											<li><p><a href="contact.html">Contact</a></p></li>					
 										</ul>
 
 									</div>
