--- a/projects.html
+++ b/projects.html
@@ -109,6 +109,7 @@
 											<ul class="sub-menu">
 												<li aria-haspopup="true"><a href="about.html">About Us</a></li>
 												<li aria-haspopup="true"><a href="gallery.html">Gallery</a></li>
+												<li aria-haspopup="true"><a href="contact.html">Contact</a></li>
 											</ul>
 								    </li>
 
@@ -132,7 +133,7 @@
 
 											<!-- GET STARTED BUTTON -->
 											<li class="nl-simple" aria-haspopup="true">
-												<a href="signup-1.html" class="btn r-06 btn--theme hover--tra-coal last-link"><i class="fa-brands fa-paypal"></i>Make a Donation</a>
+												<a href="https://ko-fi.com/youngleadersfoundation" class="btn r-06 btn--theme hover--tra-coal last-link" target="_blank" rel="noopener"><i class="fa-brands fa-paypal"></i>Make a Donation</a>
 											</li>
 
 	        					</ul>
@@ -361,7 +362,8 @@
 											<li><p><a href="about.html">About Us</a></p></li>
 											<li><p><a href="partnerships.html">Partnerships</a></p></li>							
 											<li><p><a href="projects.html">Projects</a></p></li>							
-											<li><p><a href="global-presence.html">Global Presence</a></p></li>							
+											<li><p><a href="global-presence.html">Global Presence</a></p></li>
+											<li><p><a href="contact.html">Contact</a></p></li>						
 										</ul>
 
 									</div>
