--- a/about.html
+++ b/about.html
@@ -119,6 +119,7 @@
 											<ul class="sub-menu">
 												<li aria-haspopup="true"><a href="about.html" style="text-decoration: underline;">About Us</a></li>
 												<li aria-haspopup="true"><a href="gallery.html">Gallery</a></li>
+                        <li aria-haspopup="true"><a href="contact.html">Contact</a></li>
 											</ul>
 								    </li>
 
@@ -155,7 +156,7 @@
 
 											<!-- GET STARTED BUTTON -->
 											<li class="nl-simple" aria-haspopup="true">
-												<a href="signup-1.html" class="btn r-06 btn--theme hover--tra-coal last-link"><i class="fa-brands fa-paypal"></i>Make a Donation</a>
+												<a href="https://ko-fi.com/youngleadersfoundation" class="btn r-06 btn--theme hover--tra-coal last-link" target="_blank" rel="noopener"><i class="fa-brands fa-paypal"></i>Make a Donation</a>
 											</li>
 
 	        					</ul>
@@ -419,8 +420,8 @@
 											<h2>Beatrice de Salles</h2>
 											<p class="text-muted"><strong>Director (USA & China)</strong></p>
                       <ul class="foo-links clearfix d-flex gap-3">
-                        <li><p><a href="terms.html"><i class="fa-brands fa-linkedin"></i></a></p></li>								
-                        <li><p><a href="terms.html"><i class="fa-solid fa-envelope"></i></a></p></li>												
+                        <!-- <li><p><a href="terms.html"><i class="fa-brands fa-linkedin"></i></a></p></li>					 -->
+                        <li><p><a href="mailto:biadesalles@yahoo.com" target="_blank"><i class="fa-solid fa-envelope me-2 mb-3"></i>biadesalles@yahoo.com</a></p></li>												
                       </ul>
 
 											<!-- Text -->  
@@ -567,7 +568,8 @@
 											<li><p><a href="about.html">About Us</a></p></li>
 											<li><p><a href="partnerships.html">Partnerships</a></p></li>							
 											<li><p><a href="projects.html">Projects</a></p></li>							
-											<li><p><a href="global-presence.html">Global Presence</a></p></li>							
+											<li><p><a href="global-presence.html">Global Presence</a></p></li>
+                      <li><p><a href="contact.html">Contact</a></p></li>						
 										</ul>
 
 									</div>
