--- a/thank-you.html
+++ b/thank-you.html
@@ -71,7 +71,7 @@
 
 			<!-- HEADER
 			============================================= -->
-			<header id="header" class="tra-menu navbar-light white-scroll">
+			<header id="header" class="tra-menu navbar-dark white-scroll">
 				<div class="header-wrapper">
 
 					<!-- MOBILE HEADER -->
@@ -87,15 +87,9 @@
 	    				<div class="wsmainwp clearfix">
 
 
-								<!-- HEADER BLACK LOGO -->
+	    					<!-- HEADER BLACK LOGO -->
 	    					<div class="desktoplogo">
 	    						<a href="#home" class="logo-black"><img src="images/logo-yl-black.png" alt="logo"></a>
-	    					</div>
-
-
-	    					<!-- HEADER WHITE LOGO -->
-	    					<div class="desktoplogo">
-	    						<a href="#home" class="logo-white"><img src="images/logo-yl.png" alt="logo"></a>
 	    					</div>
 
 
@@ -115,7 +109,7 @@
 											<ul class="sub-menu">
 												<li aria-haspopup="true"><a href="about.html">About Us</a></li>
 												<li aria-haspopup="true"><a href="gallery.html">Gallery</a></li>
-                        <li aria-haspopup="true"><a href="contact.html">Contact</a></li>
+                        <li aria-haspopup="true"><a href="contact.html" style="text-decoration: underline;">Contact</a></li>
 											</ul>
 								    </li>
 
@@ -133,7 +127,7 @@
 
 							    	<!-- SIMPLE NAVIGATION LINK -->
 							    	<li class="nl-simple" aria-haspopup="true">
-							    		<a href="global-presence.html" class="h-link" style="text-decoration: underline;">Global Presence</a>
+							    		<a href="global-presence.html" class="h-link">Global Presence</a>
 							    	</li>
 
 
@@ -154,151 +148,27 @@
 			</header>	<!-- END HEADER -->
 
 
-			<!-- HERO-9
-			============================================= -->	
-			<section id="hero-7" class="bg--fixed hero-section division">
-
-
-				<!-- HERO-9 CONTENT -->
-				<div class="hero-overlay py-100" id="home">
-					<div class="container">	
-						<div class="row d-flex align-items-center">
-
-
-							<!-- HERO TEXT -->
-							<div class="col order-first order-md-2">
-								<div class="hero-9-txt color--white wow animate__animated animate__fadeInLeft">
-
-									<!-- Title -->
-									<h2 class="text-center">Internationalization and Global Youth Engagement</h2>	
-
-									<!-- Text -->
-									<p class="p-lg text-center">The year 2025 will mark a milestone in the international journey of the Jovens Líderes (Young Leaders) project through three interconnected programs: the Online Pre-COP Symposium, official Youth Participation in COP30 in Belém (PA), and the Cultural Routes initiative. Together, these programs expand the role of Brazilian youth in global climate debates, strengthen traditional knowledge, and connect grassroots territories to the world.
-									</p>
-
-									<div class="container text-center mt-5">
-										<img src="/images/full-logo-yl.png" alt="" width="150">
-									</div>
-
-								</div>
-							</div>	<!-- END HERO TEXT -->	
-
-
-						</div>    <!-- End row --> 	
-					</div>	   <!-- End container --> 
-				</div>	   <!-- END HERO-9 CONTENT -->
-
-
-				<!-- WAVE SHAPE BOTTOM -->	
-				<div class="wave-shape-bottom">
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 35"><path fill-opacity="1" d="M0,32L1440,0L1440,320L0,320Z"></path></svg>
-				</div>
-
-
-			</section>	<!-- END HERO-9 -->	
-
-
-      <!-- PRE-COP SYMPOSIUM -->
-      <section class="pt-60 pb-60 content-section division">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-md-6">
-              <div class="txt-block">
-                <h3 class="h3-md">Pre-COP Online Symposium &ndash; Youth Inspiring the Future of Climate</h3>
-                <p>
-                  The Pre-COP Online Symposium &ndash; Youth Inspiring the Future of Climate is an international virtual gathering
-                  that will bring together over 2,500 young people from across Brazil and other countries between August and
-                  October 2025. The event serves as a preparatory space for COP30, promoting education, dialogue, and
-                  collective action around climate issues, social justice, and public policy. The program includes multilingual
-                  workshops, thematic panels, dialogue circles, a youth cultural showcase, co-creation labs, and the
-                  presentation of community-based solutions.
-                </p>
-                <p>
-                  As part of the symposium, a competition will be held to select the best projects, videos, essays, or podcasts
-                  submitted by participants. The top entries will be awarded a fully funded international trip to China in 2025,
-                  through the global program View on China. This immersive experience will offer selected youth the
-                  opportunity to explore sustainability initiatives, innovation centers, and universities in China, while engaging
-                  in cultural exchange with young leaders from around the world.
-                </p>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <img class="img-fluid rounded" src="images/gallery/young-leaders-41.png" alt="Pre-COP Symposium">
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- COP30 SECTION -->
-      <section class="pt-60 pb-60 content-section division">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-md-6 order-md-2">
-              <div class="txt-block">
-                <h3 class="h3-md">COP30 &ndash; Youth Leadership at the Heart of Global Climate Action</h3>
-                <p>
-                  During COP30, taking place in November 2025 in Belém, Pará (Brazil), the Young Leaders Delegation will
-                  participate with its own agenda, developed in collaboration with youth from across Brazil and around the
-                  world. Activities will include participation in UN-recognized side events, panels on social technologies,
-                  ecological sanitation, and grassroots leadership, as well as dialogue circles among Indigenous, Quilombola,
-                  and international youth activists.
-                </p>
-                <p>
-                  The delegation will also present climate justice practices developed by young people in their communities,
-                  acting as a direct representation of Brazil’s traditional and marginalized youth, bringing historically silenced
-                  voices to the center of global climate discussions.
-                </p>
-              </div>
-            </div>
-            <div class="col-md-6 order-md-1">
-              <img class="img-fluid rounded" src="images/gallery/young-leaders-42.png" alt="COP30 Youth Participation">
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- CULTURAL ROUTES -->
-      <section class="pt-60 pb-60 content-section division">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-md-6">
-              <div class="txt-block">
-                <h3 class="h3-md">Cultural Routes &ndash; Knowledge, Territories, and Youth in Movement</h3>
-                <p>
-                  The Cultural Routes are annual in-person and traveling experiences held in traditional, quilombola, Indigenous,
-                  peripheral, and riverside communities. Their aim is to foster cultural exchange, support youth-led
-                  microprojects, and strengthen local identities. Each route lasts between 4 to 7 days and includes workshops,
-                  immersive experiences, collective efforts (mutirões), knowledge-sharing circles, and cultural performances.
-                </p>
-                <p>
-                  Participants also receive technical support and microfunding to develop local initiatives. The journeys are
-                  documented through audiovisual materials and the creation of educational resources that highlight the wisdom
-                  and richness of the visited territories.
-                </p>
-                <p><strong>Cultural Routes Calendar:</strong><br>
-                  2025 &ndash; Pará (during COP30)<br>
-                  2026 &ndash; Ceará, Brazil<br>
-                  2027 &ndash; Maranhão<br>
-                  2028 &ndash; São Paulo<br>
-                  2029 &ndash; Rio de Janeiro
-                </p>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <img class="img-fluid rounded" src="images/gallery/young-leaders-43.png" alt="Cultural Routes">
-              <img class="img-fluid rounded mt-3" src="images/gallery/young-leaders-44.png" alt="Cultural Routes">
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- CALL TO ACTION -->
-      <section class="pt-60 pb-100 cta-section division text-center">
+      <!-- THANK YOU PAGE
+      ============================================= -->
+      <section class="pt-100 pb-100 inner-page-hero division text-center">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-md-10">
-              <h4 class="h4-xl">Want to support or learn more about our international initiatives?</h4>
-              <a href="contact.html" class="btn btn-md btn--theme hover--theme mt-3">Get in Touch</a>
+            <div class="col-md-10 col-lg-8">
+
+              <!-- Section ID -->
+              <span class="section-id">Thank You!</span>
+
+              <!-- Title -->
+              <h2 class="h2-title">Your message has been successfully sent</h2>
+
+              <!-- Text -->
+              <p class="p-lg my-4">
+                We appreciate you reaching out to us. Our team will review your message and respond as soon as possible.
+              </p>
+
+              <!-- Button -->
+              <a href="index.html" class="btn btn-md btn--theme hover--theme r-06">Back to Home</a>
+
             </div>
           </div>
         </div>
