feat: insert partners logo

--- a/about.html
+++ b/about.html
@@ -429,12 +429,6 @@
 
 											<p>She participates in the United Nations Commission on the Status of Women (UN CSW) and is a member of the G100 Global Advisory Council for Culture & Heritage, as well as WEF and WICCI.</p>
 
-											<!-- Stats -->
-											<div class="d-flex gap-4 pt-3">
-												<div><strong>People Impacted:</strong> 1000</div>
-												<div><strong>Annual Goal Achieved:</strong> 80%</div>
-											</div>
-
 										</div>
 									</div>  <!-- END TEXT BLOCK -->  
 
@@ -480,12 +474,6 @@
 
 											<p>Law student at Faculdade Luciano Feijão, with international experience through an academic exchange at the Polytechnic Institute of Bragança in Portugal. He also serves as Event Coordinator for the Young Professional Fellowship Brazil, promoting leadership and international cooperation initiatives.</p>
 
-											<!-- Stats -->
-											<div class="d-flex gap-4 pt-3">
-												<div><strong>People Impacted:</strong> 1000</div>
-												<div><strong>Annual Goal Achieved:</strong> 80%</div>
-											</div>
-
 										</div>
 									</div>  <!-- END TEXT BLOCK -->  
 
@@ -515,11 +503,36 @@
 					<!-- BRANDS CAROUSEL -->			
 					<div class="row">
 						<div class="col text-center">	
-							<div class="">
+							<div class="owl-carousel brands-carousel-5">
 												
 								<!-- BRAND LOGO IMAGE -->
 								<div class="brand-logo">
-									<a href="https://www.hearthecry.org/"><img class="img-fluid" src="images/brand-1.png" alt="brand-logo" width="150"></a>
+									<a href="https://youngprofessionalfellowship.org/"><img class="img-fluid" src="images/partners/partner-01.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://globalpeacechain.org/"><img class="img-fluid" src="images/partners/partner-02.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.abas.org/"><img class="img-fluid" src="images/partners/partner-03.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://sjwp.com.br/"><img class="img-fluid" src="images/partners/partner-04.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.bloomberg.org/"><img class="img-fluid" src="images/partners/partner-05.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.brazilcham.se/"><img class="img-fluid" src="images/partners/partner-06.png" alt="brand-logo" width="150" height="200"></a>
 								</div>
 
 							</div>	
