--- a/index.html
+++ b/index.html
@@ -340,6 +340,66 @@
 			</section>	<!-- END TEXT CONTENT -->
 
 
+			<!-- BRANDS-1
+			============================================= -->
+			<div id="brands-1" class="py-100 brands-section">
+				<div class="container">	
+
+
+					<!-- BRANDS TITLE -->
+					<div class="row justify-content-center">	
+						<div class="col-md-10 col-lg-9">
+							<div class="brands-title">
+								<h6 class="h6-md">Backed by global allies in social change:</h6>
+							</div>
+						</div>
+					</div>
+
+
+					<!-- BRANDS CAROUSEL -->			
+					<div class="row">
+						<div class="col text-center">	
+							<div class="owl-carousel brands-carousel-5">
+												
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://youngprofessionalfellowship.org/"><img class="img-fluid" src="images/partners/partner-01.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://globalpeacechain.org/"><img class="img-fluid" src="images/partners/partner-02.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.abas.org/"><img class="img-fluid" src="images/partners/partner-03.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://sjwp.com.br/"><img class="img-fluid" src="images/partners/partner-04.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.bloomberg.org/"><img class="img-fluid" src="images/partners/partner-05.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.brazilcham.se/"><img class="img-fluid" src="images/partners/partner-06.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+							</div>	
+						</div>
+					</div>  <!-- END BRANDS CAROUSEL -->
+
+
+				</div>	<!-- End container -->
+			</div>	<!-- END BRANDS-1 -->
+
+
 			<!-- STATISTIC-1
 			============================================= -->
 			<div id="statistic-1" class="py-100 statistic-section division">
@@ -1038,12 +1098,6 @@
 
 										<p>She participates in the United Nations Commission on the Status of Women (UN CSW) and is a member of the G100 Global Advisory Council for Culture & Heritage, as well as WEF and WICCI.</p>
 
-										<!-- Stats -->
-										<div class="d-flex gap-4 pt-3">
-											<div><strong>People Impacted:</strong> 1000</div>
-											<div><strong>Annual Goal Achieved:</strong> 80%</div>
-										</div>
-
 									</div>
 								</div>  <!-- END TEXT BLOCK -->  
 
@@ -1089,12 +1143,6 @@
 										<p>Founder of Global Young Leaders in Brazil. Legal intern at Grupo Serpa, a transnational export and import company operating in Brazil, the United States, and China.</p>
 
 										<p>Law student at Faculdade Luciano Feijão, with international experience through an academic exchange at the Polytechnic Institute of Bragança in Portugal. He also serves as Event Coordinator for the Young Professional Fellowship Brazil, promoting leadership and international cooperation initiatives.</p>
-
-										<!-- Stats -->
-										<div class="d-flex gap-4 pt-3">
-											<div><strong>People Impacted:</strong> 1000</div>
-											<div><strong>Annual Goal Achieved:</strong> 80%</div>
-										</div>
 
 									</div>
 								</div>  <!-- END TEXT BLOCK -->  
