fix: correct founders bio

--- a/about.html
+++ b/about.html
@@ -418,16 +418,19 @@
 
 											<!-- Title -->  
 											<h2>Beatrice de Salles</h2>
-											<p class="text-muted"><strong>Director (USA & China)</strong></p>
+											<p class="text-muted"><strong>CEO & Director (USA & Canada & Asia)</strong></p>
                       <ul class="foo-links clearfix d-flex gap-3">
                         <!-- <li><p><a href="terms.html"><i class="fa-brands fa-linkedin"></i></a></p></li>					 -->
                         <li><p><a href="mailto:biadesalles@yahoo.com" target="_blank"><i class="fa-solid fa-envelope me-2 mb-3"></i>biadesalles@yahoo.com</a></p></li>												
                       </ul>
 
 											<!-- Text -->  
-											<p>Director of Global Young Leaders in the USA and China. She serves as an Academic Advisor, Peace Ambassador, and Translator/Interpreter (fluent in French, Portuguese, Italian, Spanish, English, German, Turkish, Hebrew, and Dutch), with expertise in Global Affairs, International Relations, and Diplomacy.</p>
+                      <p>Director of Global Young Leaders in the USA and Asia.
+                      Serves as an Academic Advisor, Peace Ambassador, and Multilingual Translator/Interpreter with expertise in Global Affairs, International Relations, and Diplomacy. With a passport stamped with over 100 countries, her work bridges continents, celebrates cultural heritage, and empowers communities through Languages & Legacy.</p>
 
-											<p>She participates in the United Nations Commission on the Status of Women (UN CSW) and is a member of the G100 Global Advisory Council for Culture & Heritage, as well as WEF and WICCI.</p>
+                      <p>Beatrice serves on the board of the United Nations Commission on the Status of Women, UNA, World Affairs Council, Global CSR Foundation, African Views, and Humanitarian Coalition. She is also the California Chair for WEF-G100 in Business & Network and is a Global Advisory Council for UNESCO Culture & Heritage & Contributor on Intercultural Competences as a Global Published Journalist.</p>
+
+                      <p>She coordinates initiatives across Europe, including France, Italy, the UK, Poland, the Netherlands, Switzerland, Malta, Spain, and Turkey, promoting youth leadership and cross-cultural exchange.</p>
 
 										</div>
 									</div>  <!-- END TEXT BLOCK -->  
@@ -463,16 +466,18 @@
 
 											<!-- Title -->  
 											<h2>Daniel Rubens</h2>
-											<p class="text-muted"><strong>Founder & Director (Brazil)</strong></p>
+											<p class="text-muted"><strong>Founder & President (Brazil & LATAM)</strong></p>
                       <ul class="foo-links clearfix d-flex gap-3">
                         <li><p><a href="terms.html"><i class="fa-brands fa-linkedin"></i></a></p></li>								
                         <li><p><a href="terms.html"><i class="fa-solid fa-envelope"></i></a></p></li>												
                       </ul>
 
 											<!-- Text -->  
-											<p>Founder of Global Young Leaders in Brazil. Legal intern at Grupo Serpa, a transnational export and import company operating in Brazil, the United States, and China.</p>
+                      <p>Founder of Global Young Leaders in Brazil. Legal Advisor at Grupo Serpa, a transnational export and import conglomerate operating in Brazil, United States, and China. Law student at Faculdade Luciano Feijão, with international experience through an academic exchange at the Polytechnic Institute of Bragança, in Portugal.</p>
 
-											<p>Law student at Faculdade Luciano Feijão, with international experience through an academic exchange at the Polytechnic Institute of Bragança in Portugal. He also serves as Event Coordinator for the Young Professional Fellowship Brazil, promoting leadership and international cooperation initiatives.</p>
+                      <p>Daniel serves as Event Coordinator for the Young Professional Fellowship Brazil, promoting leadership and international cooperation initiatives. Daniel was chosen as a high achiever and young leader inspiration. He supports socially responsible projects in LATAM & Brazil. He has been collaborating with many international and local humanitarian organizations.</p>
+
+                      <p>His work also extends across Latin America and Central America - including Mexico and Portugal - where he helps strengthen youth engagement and cross-border partnerships.</p>
 
 										</div>
 									</div>  <!-- END TEXT BLOCK -->  
