feat: include new images and partners to index and gallery pages

--- a/contact.html
+++ b/contact.html
@@ -173,10 +173,9 @@
 
                 <!-- Socials Links -->
                 <ul class="contacts-info-socials ico-25">
+                  <li><a href="https://www.instagram.com/jovenslideress/" target="_blank" rel="noopener"><span class="flaticon-instagram"></span></a></li>
                   <li><a href="#"><span class="flaticon-facebook"></span></a></li>
                   <li><a href="#"><span class="flaticon-twitter-1"></span></a></li>
-                  <li><a href="#"><span class="flaticon-linkedin-logo"></span></a></li>
-                  <li><a href="#"><span class="flaticon-instagram"></span></a></li>
                 </ul>
 
               </div>		
@@ -311,10 +310,10 @@
 
 									    <!-- Links -->
 								     	<ul class="foo-links clearfix d-flex gap-2">
-											<li><p><a href="terms.html"><i class="fa-brands fa-instagram"></i></a></p></li>								
-											<li><p><a href="terms.html"><i class="fa-brands fa-facebook"></i></a></p></li>								
-											<li><p><a href="terms.html"><i class="fa-brands fa-x-twitter"></i></a></p></li>								
-										</ul>
+												<li><p><a href="https://www.instagram.com/jovenslideress/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a></p></li>								
+												<li><p><a href="#"><i class="fa-brands fa-facebook"></i></a></p></li>								
+												<li><p><a href="#"><i class="fa-brands fa-x-twitter"></i></a></p></li>								
+											</ul>
 
 									</div>
 							  </div>	<!-- END FOOTER LINKS #3 -->
