--- a/gallery.html
+++ b/gallery.html
@@ -389,6 +389,61 @@
 								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-40.jpg" alt="Gallery Image 40">
 							</a>
 						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-41.png">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-41.png" alt="Gallery Image 41">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-42.png">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-42.png" alt="Gallery Image 42">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-43.png">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-43.png" alt="Gallery Image 43">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-44.png">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-44.png" alt="Gallery Image 44">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-45.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-45.jpeg" alt="Gallery Image 45">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-46.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-46.jpeg" alt="Gallery Image 46">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-47.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-47.jpeg" alt="Gallery Image 47">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-48.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-48.jpeg" alt="Gallery Image 48">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-49.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-49.jpeg" alt="Gallery Image 49">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-50.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-50.jpeg" alt="Gallery Image 50">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-51.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-51.jpeg" alt="Gallery Image 51">
+							</a>
+						</div>
 
 					</div> <!-- End row -->
 
@@ -476,10 +531,10 @@
 
 									    <!-- Links -->
 								     	<ul class="foo-links clearfix d-flex gap-2">
-											<li><p><a href="terms.html"><i class="fa-brands fa-instagram"></i></a></p></li>								
-											<li><p><a href="terms.html"><i class="fa-brands fa-facebook"></i></a></p></li>								
-											<li><p><a href="terms.html"><i class="fa-brands fa-x-twitter"></i></a></p></li>								
-										</ul>
+												<li><p><a href="https://www.instagram.com/jovenslideress/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a></p></li>								
+												<li><p><a href="#"><i class="fa-brands fa-facebook"></i></a></p></li>								
+												<li><p><a href="#"><i class="fa-brands fa-x-twitter"></i></a></p></li>								
+											</ul>
 
 									</div>
 							  </div>	<!-- END FOOTER LINKS #3 -->
