--- a/projects.html
+++ b/projects.html
@@ -397,10 +397,10 @@
 
 									    <!-- Links -->
 								     	<ul class="foo-links clearfix d-flex gap-2">
-											<li><p><a href="terms.html"><i class="fa-brands fa-instagram"></i></a></p></li>								
-											<li><p><a href="terms.html"><i class="fa-brands fa-facebook"></i></a></p></li>								
-											<li><p><a href="terms.html"><i class="fa-brands fa-x-twitter"></i></a></p></li>								
-										</ul>
+												<li><p><a href="https://www.instagram.com/jovenslideress/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a></p></li>								
+												<li><p><a href="#"><i class="fa-brands fa-facebook"></i></a></p></li>								
+												<li><p><a href="#"><i class="fa-brands fa-x-twitter"></i></a></p></li>								
+											</ul>
 
 									</div>
 							  </div>	<!-- END FOOTER LINKS #3 -->
