--- a/about.html
+++ b/about.html
@@ -540,6 +540,31 @@
 									<a href="https://www.brazilcham.se/"><img class="img-fluid" src="images/partners/partner-06.png" alt="brand-logo" width="150" height="200"></a>
 								</div>
 
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.brazilcham.se/"><img class="img-fluid" src="images/partners/partner-07.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.brazilcham.se/"><img class="img-fluid" src="images/partners/partner-08.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.brazilcham.se/"><img class="img-fluid" src="images/partners/partner-09.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.brazilcham.se/"><img class="img-fluid" src="images/partners/partner-10.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
+								<!-- BRAND LOGO IMAGE -->
+								<div class="brand-logo">
+									<a href="https://www.brazilcham.se/"><img class="img-fluid" src="images/partners/partner-11.png" alt="brand-logo" width="150" height="200"></a>
+								</div>
+
 							</div>	
 						</div>
 					</div>  <!-- END BRANDS CAROUSEL -->
@@ -621,10 +646,10 @@
 
 									    <!-- Links -->
 								     	<ul class="foo-links clearfix d-flex gap-2">
-											<li><p><a href="terms.html"><i class="fa-brands fa-instagram"></i></a></p></li>								
-											<li><p><a href="terms.html"><i class="fa-brands fa-facebook"></i></a></p></li>								
-											<li><p><a href="terms.html"><i class="fa-brands fa-x-twitter"></i></a></p></li>								
-										</ul>
+												<li><p><a href="https://www.instagram.com/jovenslideress/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a></p></li>								
+												<li><p><a href="#"><i class="fa-brands fa-facebook"></i></a></p></li>								
+												<li><p><a href="#"><i class="fa-brands fa-x-twitter"></i></a></p></li>								
+											</ul>
 
 									</div>
 							  </div>	<!-- END FOOTER LINKS #3 -->
