feat: add new photos to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -444,6 +444,21 @@
 								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-51.jpeg" alt="Gallery Image 51">
 							</a>
 						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-53.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-53.jpeg" alt="Gallery Image 53">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-54.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-54.jpeg" alt="Gallery Image 54">
+							</a>
+						</div>
+						<div class="col-md-4 col-sm-6 mb-4">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-55.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-55.jpeg" alt="Gallery Image 55">
+							</a>
+						</div>
 
 					</div> <!-- End row -->
 
