--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
 							<div class="section-title mb-70">		
 
 								<!-- Title -->	
-								<h3 class="h2-xl">2025 – Internationalization and Global Youth Engagement</h3>
+								<h3 class="h2-xl">2025 - Internationalization and Global Youth Engagement</h3>
 
 								<!-- Text -->	
 								<p class="p-xl">In 2025, Jovens Líderes will take a major step in its international journey through three programs: the Online Pre-COP Symposium, Youth Participation at COP30 in Belém, and the Cultural Routes initiative. These efforts amplify the voice of Brazilian youth in global climate discussions and connect local territories to the world.</p>
@@ -895,7 +895,7 @@
 						<!-- IMAGE BLOCK -->
 						<div class="col-md-6">
 							<div class="img-block left-column wow animate__animated animate__fadeInRight">
-								<img class="img-fluid" src="images/gallery/young-leaders-17.jpg" alt="young-leaders" style="border-radius: 8px;">
+								<img class="img-fluid border" src="images/gallery/young-leaders-53.jpeg" alt="young-leaders" style="border-radius: 8px;">
 							</div>
 						</div>
 
@@ -1036,8 +1036,8 @@
 							</a>
 						</div>
 						<div class="col-md-4 col-sm-6 mb-4">
-							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-11.jpg">
-								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-11.jpg" alt="Gallery Image 12">
+							<a href="#" data-bs-toggle="modal" data-bs-target="#photoModal" data-img="images/gallery/young-leaders-52.jpeg">
+								<img class="img-fluid rounded shadow-sm" src="images/gallery/young-leaders-52.jpeg" alt="Gallery Image 12">
 							</a>
 						</div>
 						<div class="col-md-4 col-sm-6 mb-4">
